--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="For WDD 230 Winter 2023 for Ella Chamberlain">
+    <title>Assignment Portal for Ella Chamberlain</title>
+    <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <script src="./scripts/homepage.js" defer></script>
+</head>
 <body>
-    <p>Hello</p>
+    <header>
+        <div>
+            <img src="./images/portrait.jpg"></img>
+        </div>
+        <div><h1>Ella Chamberlain</h1></div>
+    </header>
+    <main>
+        <div id="content">
+            <h2>WDD 230: Assignment Portal</h2>
+            <hr>
+            <ul>
+                <li>This is a list for assignments</li>
+            </ul>
+            <hr>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
+        <p>Last Updated: <span id='lastModified'></span></p>
+    </footer>
 </body>
+</html>
