--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./scripts/homepage.js" defer></script>
 </head>
 <body>
+    <div id ="content">
     <header>
         <div>
             <img src="./images/portrait.jpg"></img>
@@ -30,5 +31,6 @@
         <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
         <p>Last Updated: <span id='lastModified'></span></p>
     </footer>
+</div>
 </body>
 </html>
