--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="For WDD 230 Winter 2023 for Ella Chamberlain">
     <title>Assignment Portal for Ella Chamberlain</title>
     <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="./styles/medium.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/homepage.js" defer></script>
 </head>
