--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>WDD 230: Assignment Portal</h2>
             <hr>
             <ul>
-                <li>This is a list for assignments</li>
+                <li><a href="./lesson2/design-principles.html">Lesson 2: Design Principles Document</a></li>
             </ul>
             <hr>
         </div>
