--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Design Principles for WDD230">
     <title>Design Principles Document</title>
     <link rel="stylesheet" href="./styles/small.css">
+    <link rel="stylesheet" href="./styles/medium.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/design.js" defer></script>
 </head>
@@ -18,14 +19,26 @@
         </div>
     </header>
     <main>
-        <div id = "title"><h3>Design Principle</h3></div>
+        <div class = "title"><h3>Rule of Thirds</h3></div>
         <div class = "section"> 
-            <p>Website Name</p>
-            <p>Website Link</p>
+            <p>Crumbl Cookies</p>
+            <p><a href="https://crumblcookies.com/">https://crumblcookies.com/</a></p>
             <img src="./images/cookie.jpg" alt="crumbl cookie website"></img>
             <p>Paragraph</p>
-    
         </div>
+        <div class = "title"><h3>Contrast</h3></div>
+        <div class = "section"> 
+            <p>Adobe</p>
+            <p><a href="https://www.adobe.com/">https://www.adobe.com/</a></p>
+            <img src="./images/adobe.jpg" alt="adobe website"></img>
+            <p>Paragraph</p>
+        </div>
+        <div class = "title"><h3>Color</h3></div>
+        <div class = "section"> 
+            <p>VSCO</p>
+            <p><a href="https://www.vsco.co/">https://www.vsco.co/</a></p>
+            <img src="./images/IMG-7622.jpg" alt="vsco website"></img>
+            <p>Paragraph</p>
     </main>
     <footer>
         <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
