--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,6 +7,7 @@
     <title>Design Principles Document</title>
     <link rel="stylesheet" href="./styles/small.css">
     <link rel="stylesheet" href="./styles/medium.css">
+    <link rel="stylesheet" href="./styles/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/design.js" defer></script>
 </head>
@@ -19,26 +20,38 @@
         </div>
     </header>
     <main>
-        <div class = "title"><h3>Rule of Thirds</h3></div>
+    <section>
         <div class = "section"> 
+            <h3>Rule of Thirds</h3>
             <p>Crumbl Cookies</p>
             <p><a href="https://crumblcookies.com/">https://crumblcookies.com/</a></p>
             <img src="./images/cookie.jpg" alt="crumbl cookie website"></img>
-            <p>Paragraph</p>
+            <p>The Crumbl Cookies website displays the rule of thirds well by having the focal points of
+                the cookies and the titles being in the on one side of a grid. This makes for a
+                more pleasing and interesting layout.
+            </p>
         </div>
-        <div class = "title"><h3>Contrast</h3></div>
+
         <div class = "section"> 
+            <h3>Contrast</h3>
             <p>Adobe</p>
             <p><a href="https://www.adobe.com/">https://www.adobe.com/</a></p>
             <img src="./images/adobe.jpg" alt="adobe website"></img>
-            <p>Paragraph</p>
+            <p>The Adobe website uses bright contrasting colors well to make their colors pop. With a white background, 
+                 it helps to make the colors pop even more. </p>
         </div>
-        <div class = "title"><h3>Color</h3></div>
+
         <div class = "section"> 
+            <h3>Color</h3>
             <p>VSCO</p>
             <p><a href="https://www.vsco.co/">https://www.vsco.co/</a></p>
             <img src="./images/IMG-7622.jpg" alt="vsco website"></img>
-            <p>Paragraph</p>
+            <p>VSCO lays out different photos using the rule of thirds well, but they also use color
+                to make a cool website. Each picture uses a different color theme to show off the 
+                different photos on their website. 
+            </p>
+        </div>
+    </section>
     </main>
     <footer>
         <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
