--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Design Principles for WDD230">
     <title>Design Principles Document</title>
     <link rel="stylesheet" href="./styles/small.css">
@@ -25,7 +26,7 @@
             <h3>Rule of Thirds</h3>
             <p>Crumbl Cookies</p>
             <p><a href="https://crumblcookies.com/">https://crumblcookies.com/</a></p>
-            <img src="./images/cookie.jpg" alt="crumbl cookie website"></img>
+            <img src="./images/cookie.jpg" alt="crumbl cookie website">
             <p>The Crumbl Cookies website displays the rule of thirds well by having the focal points of
                 the cookies and the titles being in the on one side of a grid. This makes for a
                 more pleasing and interesting layout.
@@ -36,7 +37,7 @@
             <h3>Contrast</h3>
             <p>Adobe</p>
             <p><a href="https://www.adobe.com/">https://www.adobe.com/</a></p>
-            <img src="./images/adobe.jpg" alt="adobe website"></img>
+            <img src="./images/adobe.jpg" alt="adobe website">
             <p>The Adobe website uses bright contrasting colors well to make their colors pop. With a white background, 
                  it helps to make the colors pop even more. </p>
         </div>
@@ -45,7 +46,7 @@
             <h3>Color</h3>
             <p>VSCO</p>
             <p><a href="https://www.vsco.co/">https://www.vsco.co/</a></p>
-            <img src="./images/IMG-7622.jpg" alt="vsco website"></img>
+            <img src="./images/IMG-7622.jpg" alt="vsco website">
             <p>VSCO lays out different photos using the rule of thirds well, but they also use color
                 to make a cool website. Each picture uses a different color theme to show off the 
                 different photos on their website. 
