--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="For WDD 230 Winter 2023 for Ella Chamberlain">
     <title>Assignment Portal for Ella Chamberlain</title>
     <link rel="stylesheet" href="./styles/homepage.css">
