--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <hr>
             <ul>
                 <li><a href="./lesson2/design-principles.html">Lesson 2: Design Principles Document</a></li>
+                <li><a href="./lesson3/index.html">Lesson 3: Website Planning Document</a></li>
             </ul>
             <hr>
         </div>
