--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <h1>Design</h1>
-        <p>testing testing testing</p>
+        <p>#647C90, #E2DED0, #4E4F50, #746C70</p>
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
