--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -25,6 +25,7 @@
     <main>
         <h1>Main Plan Stuff</h1>
         <p>testing testing testing</p>
+        <img src="./images/logo.png" alt="vsco website">
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
