--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <h1>Target Audience</h1>
-        <p>testing testing testing</p>
+        <p>Person wanting to start a business, traveling to city, investment banker (2 different reasons, 2 different personas</p>
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
