--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -24,7 +24,11 @@
     </nav>
     <main>
         <h1>Design</h1>
-        <p>#647C90, #E2DED0, #4E4F50, #746C70</p>
+        <h2>Color Pallette</h2>
+        <img src="./images/colors.png" alt="logo">
+        <h2>Fonts</h2>
+        <h3>I have chosen this font which is "Mukta" for smaller text.</h3>
+        <h3 id="font">I will use this font which is "Lora" for all larger text."</h3>
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
