--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -23,9 +23,15 @@
         </ul>
     </nav>
     <main>
-        <h1>Main Plan Stuff</h1>
-        <p>testing testing testing</p>
-        <img src="./images/logo.png" alt="vsco website">
+        <h1>Main Plan</h1>
+        <h2>Name: Cedar Hills Chamber of Commerce</h2>
+        <h2>Site Purpose:</h2>
+        <p>The purpose of the Cedar Hills Chamber of Commerce website is to 
+            attract more individuals and businesses to the small town of Cedar Hills. It will
+            show of the offerings of the small city, including businesses, community events, and 
+            information about the chamber of commerce and its members.</p>
+        <h2>Logo:</h2>
+        <img src="./images/logo.png" alt="logo">
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
