--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -24,7 +24,21 @@
     </nav>
     <main>
         <h1>Target Audience</h1>
-        <p>Person wanting to start a business, traveling to city, investment banker (2 different reasons, 2 different personas</p>
+        <p>The target audience for this website includes many different
+            individuals and businesses wanting to know more about the Cedar Hills Chamber of 
+            Commerce and the offerings of the city. It is for people who live in and out of Cedar Hills
+            wanting to know more about the city, as well as informing about events and news. It is also
+            for businesses who are looking into starting in Cedar Hills. They can get an idea of the potential of the city. </p>
+        <h2>Personas</h2>
+        <h3>Number 1</h3>
+        <p>Name: Lori Daniels</p>
+        <p>Lori Daniels is the co-owner of a small locally owned business seeing desserts. 
+            They have been a business for 4 years now, and she is wanting to start expanding her 
+            business to a different area. She heard that Cedar Hills was a small city, but was growing
+            exponentially with many houses being built. She is visiting this website because she is interested in what 
+            businesses Cedar Hills already has and if the city is a good fit for her small dessert business. 
+        </p>
+        <h3>Number 2</h3>
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
