--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -39,6 +39,12 @@
             businesses Cedar Hills already has and if the city is a good fit for her small dessert business. 
         </p>
         <h3>Number 2</h3>
+        <p>Samuel Christensen</p>
+        <p>Samuel Christensen is currently living in Cedar Hills and is interested in joining the chamber
+            of commerce. By going on the website he will be able to see their mission, current members, and also
+            look at testimonials from members. He will also be able to apply to get on the chamber of commerce, and 
+            see the benefits of being a member. 
+        </p>
     </main>
 <footer>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
