--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -26,6 +26,9 @@
         <h1>Design</h1>
         <h2>Color Pallette</h2>
         <img src="./images/colors.png" alt="logo">
+        <p>I will use blue gray and cool gray for the headers and footers, while using ivory as a background
+            for the main site. I will use gray for borders and other effects on the site. 
+        </p>
         <h2>Fonts</h2>
         <h3>I have chosen this font which is "Mukta" for smaller text.</h3>
         <h3 id="font">I will use this font which is "Lora" for all larger text."</h3>
