--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,7 +16,11 @@
         <h2>Ella Chamberlain</h2>
     </header>
     <nav>
-        <ul>
+        <button id="ham-menu">
+            <span id ="menu-close">&equiv;</span>
+            <span id = "menu-open">x</span>
+        </button>
+        <ul id = "navbar">
             <li class="active"><a href="index.html">Home Page</a></li>
             <li><a href="./target-audience.html">Target Audience</a></li>
             <li><a href="./design.html">Design</a></li>
