--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,6 +52,9 @@
         <div class="news">
             <p>News Release</p>
         </div>
+        <div class="join">
+            <p>Join</p>
+        </div>
         <div class="spotlight">
         <div class="spotlight1">
             <p>Spotlight 1</p>
