--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <ul>
                 <li><a href="./lesson2/design-principles.html">Lesson 2: Design Principles Document</a></li>
                 <li><a href="./lesson3/index.html">Lesson 3: Website Planning Document</a></li>
+                <li><a href="./chamber/index.html">Chamber of Commerce Website</a></li>
             </ul>
             <hr>
         </div>
