--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <div class="flex">
-        <img src="./images/logo.png" alt="logo">
-        <div>
+        <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
+        <div class="title">
         <h1>Cedar Hills</h1>
         <h2>Chamber of Commerce</h2>
         </div>
@@ -39,6 +39,7 @@
         </div>
     </header>
     <main>
+        <div id = "content">
         <div class="hero">
             <p>Hero with site name and call to action</p>
             <p>#647C90, #E2DED0, #4E4F50, #74670</p>
@@ -62,18 +63,31 @@
         <div class="spotlight2">
             <p>Spotlight 2</p>
         </div>
+        <div class="spotlight3">
+            <p>Spotlight 3</p>
         </div>
+        </div>
+    </div>
     </main>
 <footer>
+    <div id ="footer">
     <img src="./images/logo.png" alt="logo">
+    <span>
     <h3>Cedar Hills Chamber of Commerce</h3>
     <p>145 Block Bank Road</p>
+    </span>
+    <span>
     <p>Cedar Hills, UT 84062</p>
     <p>info@cedarhills.org</p>
     <p>801-205-4985</p>
-    <p>Location Map</p>
+    <a href="https://goo.gl/maps/wDt6jbPVPSeFhCYB9" target="_blank">Location</a>
+    </span>
+    </div>
+    <div>
+    <hr>
     <p>&copy; <span id = 'currentYear'></span> | Ella Chamberlain | Rexburg, ID</p>
     <p>Last Updated: <span id='lastModified'></span></p>
+    </div>
 </footer>
 </body>
 </html>
