--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,8 +31,10 @@
                 <li><a href="./design.html">Contact</a></li>
             </ul>
         </nav>
+        <div id="social">
         <img id="facebook" src="./images/facebook.png" alt="logo">
         <img id = "twitter" src="./images/twitter.png" alt="logo">
+        </div>
         </div>
         <div id="date">
             <span id = 'current'></span> 
@@ -42,7 +44,6 @@
         <div id = "content">
         <div class="hero">
             <p>Hero with site name and call to action</p>
-            <p>#647C90, #E2DED0, #4E4F50, #74670</p>
         </div>
         <div class="event">
             <p>Event</p>
