--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,16 +73,16 @@
 <footer>
     <div id ="footer">
     <img src="./images/logo.png" alt="logo">
-    <span>
+    <div>
     <h3>Cedar Hills Chamber of Commerce</h3>
     <p>145 Block Bank Road</p>
-    </span>
-    <span>
+    </div>
+    <div>
     <p>Cedar Hills, UT 84062</p>
     <p>info@cedarhills.org</p>
     <p>801-205-4985</p>
     <a href="https://goo.gl/maps/wDt6jbPVPSeFhCYB9" target="_blank">Location</a>
-    </span>
+    </div>
     </div>
     <div>
     <hr>
