--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="./styles/site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/site.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
 </head>
 <body>
     <header>
+        <div id="meet-greet">Come join us for the meet and great on Wednesdays at 7pm.</div>
         <div class="flex">
         <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
         <div class="title">
