--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="./lesson2/design-principles.html">Lesson 2: Design Principles Document</a></li>
                 <li><a href="./lesson3/index.html">Lesson 3: Website Planning Document</a></li>
                 <li><a href="./chamber/index.html">Chamber of Commerce Website</a></li>
-                <li><a href="./lesson5/bom.html">Chamber of Commerce Website</a></li>
+                <li><a href="./lesson5/bom.html">BOM Website</a></li>
             </ul>
             <hr>
         </div>
