--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,8 +34,8 @@
             </ul>
         </nav>
         <div id="social">
-        <img id="facebook" src="./images/facebook.png" alt="logo">
-        <img id = "twitter" src="./images/twitter.png" alt="logo">
+        <a href="https://www.instagram.com/"><img id="facebook" src="./images/facebook.png" alt="logo"></a>
+        <a href="https://twitter.com/"><img id = "twitter" src="./images/twitter.png" alt="logo"></a>
         </div>
         </div>
         <div id="date">
@@ -45,29 +45,37 @@
     <main>
         <div id = "content">
         <div class="hero">
-            <p>Hero with site name and call to action</p>
+            <img id="hero" src="./images/hero.jpeg" alt="Cedar Hills Image">
+            <h1 id="hero-title">Welcome to Cedar Hills</h1>
+            <div id="join-us"><h2>Join The Chamber!</h2></div>
         </div>
         <div class="event">
-            <p>Event</p>
+            <h3>Event</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div class="weather">
-            <p>Weather</p>
+            <h3>Weather</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div class="news">
-            <p>News Release</p>
+            <h3>News Release</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div class="join">
-            <p>Join</p>
+            <div id="join-banner"><h2>Join Us!</h2></div>
         </div>
         <div class="spotlight">
         <div class="spotlight1">
-            <p>Spotlight 1</p>
+            <h3>Spotlight 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
         </div>
         <div class="spotlight2">
-            <p>Spotlight 2</p>
+            <h3>Spotlight 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
         </div>
         <div class="spotlight3">
-            <p>Spotlight 3</p>
+            <h3>Spotlight 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
         </div>
         </div>
     </div>
