--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./lazy.css">
 </head>
 <body>
-    <h1>Lazy Loading Example</h1>
+    <h1>Lazy Loading</h1>
     <picture><img src="./images/blue-gingham-600.png" alt="A blue blue gingham square." loading="lazy" height="800" width="600"></picture>
     <picture><img src="./images/bluebird-600.png" alt="A mountain bluebird." loading="lazy" height="800"></picture>
     <picture><img src="./images/helmet-600.png" alt="A BYU football helmet." loading="lazy" height="800"></picture>
