--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="./lesson3/index.html">Lesson 3: Website Planning Document</a></li>
                 <li><a href="./chamber/index.html">Chamber of Commerce Website</a></li>
                 <li><a href="./lesson5/bom.html">BOM Website</a></li>
-                <li><a href="./lesson7/lazyload.html">BOM Website</a></li>
+                <li><a href="./lesson7/lazyload.html">Lazy Load</a></li>
             </ul>
             <hr>
         </div>
