--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,8 +26,8 @@
                 <span id = "menu-open">x</span>
             </button>
             <ul id = "navbar">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="./target-audience.html">Discover</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="./discover.html">Discover</a></li>
                 <li><a href="./design.html">Directory</a></li>
                 <li><a href="./design.html">Join</a></li>
                 <li><a href="./design.html">Contact</a></li>
