--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/site.js" defer></script>
     <script src="./scripts/main.js" defer></script>
+    <script src="./scripts/windchill.js" defer></script>
 </head>
 <body>
     <header>
         <div id="meet-greet">Come join us for the meet and great on Wednesdays at 7pm.</div>
         <div class="flex">
-        <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
+        <a href="./index.html"><img src="./images/logo.webp" alt="logo"></a>
         <div class="title">
         <h1>Cedar Hills</h1>
         <h2>Chamber of Commerce</h2>
@@ -27,7 +28,7 @@
             </button>
             <ul id = "navbar">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="./target-audience.html">Discover</a></li>
+                <li><a href="./discover.html">Discover</a></li>
                 <li><a href="./design.html">Directory</a></li>
                 <li><a href="./design.html">Join</a></li>
                 <li><a href="./design.html">Contact</a></li>
@@ -50,52 +51,58 @@
             <div id="join-us"><h2>Join The Chamber!</h2></div>
         </div>
         <div class="event">
-            <h3>Event</h3>
+            <h2>Event</h2>
+            <h2>Come to the Cedar Hills Spring Bash! </h2>
+
+            <h3>Location: Cedar Hills Golf Course</h3>
+            <h3>March 21st @ 5:00pm</h3>
         </div>
         <div class="weather">
-            <h3>Weather</h3>
-            <div>
+            <h2>Weather</h2>
                 <img id="weathericon" src="images/sun.webp">
-            </div>
-            <h3><span id="temperature">5</span>"° F"</h3>
-        </div>
-        <h2 id="weatherdesc">Clear</h2>
+            <h3><span id="temperature">?</span>&deg; F</h3>
+            <h2 id="weatherdesc">Clear</h2>
         <hr>
         <h3>
-            "Wind Speed: "
-            <span id="windspeed">5</span>
-            " mph"
+            Wind Speed:
+            <span id="windspeed">?</span>
+            mph
         </h3>
         <h3>
-            "Wind Chill: "
-            <span id="windchill">-5</span>
+            Wind Chill: 
+            <span id="windchill">?</span>
         </h3>
+        </div>
         <div class="news">
             <h3>News Release</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Due to the weather we are experiencing, we may experience trash delays. Thank you for your consideration.</p>
+            <p>Contractors working in the area have hit a water line. Public workers are actively working to repair the line.</p>
         </div>
         <div class="join">
             <div id="join-banner"><h2>Join Us!</h2></div>
         </div>
         <div class="spotlight">
         <div class="spotlight1">
-            <h3>Spotlight 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            <img id="golf" src="./images/golf.jpeg" alt="Golf Club Logo">
+            <h3>Cedar Hills Golf Club</h3>
+            <p>Come to Cedar Hills Golf Club to try one free round of golf!</p>
         </div>
         <div class="spotlight2">
-            <h3>Spotlight 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            <img id="meeting" src="./images/meeting.jpeg" alt="Conference Room">
+            <h3>Chamber Meeting</h3>
+            <p>Chamber of Commerce Meeting on March 10th @ 10:00am. Please contact Jodi Powell for more information.</p>
         </div>
         <div class="spotlight3">
-            <h3>Spotlight 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            <img id="park" src="./images/park.jpeg" alt="Park">
+            <h3>Harvey Park</h3>
+            <p>Filled with Pickleball, basketball, and tennis courts, a splash pad, and a space themed playground, come check it out! 4301 Harvey Blvd</p>
         </div>
         </div>
     </div>
     </main>
 <footer>
     <div id ="footer">
-    <img src="./images/logo.png" alt="logo">
+    <img src="./images/logo.webp" alt="logo">
     <div>
     <h3>Cedar Hills Chamber of Commerce</h3>
     <p>145 Block Bank Road</p>
