--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="./chamber/index.html">Chamber of Commerce Website</a></li>
                 <li><a href="./lesson5/bom.html">BOM Website</a></li>
                 <li><a href="./lesson7/lazyload.html">Lazy Load</a></li>
+                <li><a href="./lesson9/prophet.html">Prophets</a></li>
             </ul>
             <hr>
         </div>
