--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/site.js" defer></script>
-    <script src="./scripts/main.js" defer></script>
+    <script src="./scripts/discover.js" defer></script>
     <script src="./scripts/localstorage.js" defer></script>
 </head>
 <body>
