--- a/chamber/join.html
+++ b/chamber/join.html
@@ -48,31 +48,31 @@
         <div id="area">
         <div id="form">
         <form method="GET" action="thankyou.html" >
-        <p>
+        <p id="firstname">
             <label for="firstname">First Name*</label>
             <input type="text" name="firstname" required>
         </p>
-        <p>
+        <p id="lastname">
             <label for="lastname">Last Name*</label>
             <input type="text" name="lastname" required>
         </p>
-        <p>
+        <p id="title">
             <label for="title">Title</label>
             <input type="text" name="title" minlength="7">
         </p>
-        <p>
+        <p id="email">
             <label for="email">Email*</label>
             <input type="email" name="email" required placeholder="example@email.com">
         </p>
-        <p>
+        <p id="cellphone">
             <label for="cellphone">Cell Phone*</label>
             <input type="tel" name="cellphone" required>
         </p>
-        <p>
+        <p id="businessname">
             <label for="businessname">Business Name*</label>
             <input type="text" name="businessname" required>
         </p>
-        <p>
+        <p id="select">
             <label for="select">Select Membership Level</label>
             <select name="select">
                 <option value="">--Please choose an option--</option>
@@ -82,7 +82,7 @@
                 <option value="gold">Gold</option>
             </select>
         </p>
-        <p>
+        <p id="description">
             <label for="description">Business Description</label>
             <textarea name="description" rows="5" cols="33"></textarea>
         </p>
