--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,6 @@
                 <li><a href="./discover.html">Discover</a></li>
                 <li><a href="./directory.html">Directory</a></li>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div id="social">
@@ -47,9 +46,9 @@
         <div id = "content">
         <div class="hero">
             <picture class = "image">
-                <source media="(max-width: 800px)" srcset="./images/small.jpeg" />
-                <source media="(max-width: 1130px)" srcset="./images/medium.jpeg" />
-                <img id="hero" src="./images/large.jpeg" alt="Hero Image" />
+                <source media="(max-width: 800px)" srcset="./images/hero.jpeg" />
+                <source media="(max-width: 1130px)" srcset="./images/hero.jpeg" />
+                <img id="hero" src="./images/hero.jpeg" alt="Hero Image" />
               </picture>
             <h1 id="hero-title">Welcome to Cedar Hills</h1>
             <div id="join-us"><h2>Join The Chamber!</h2></div>
