--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./styles/site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="./scripts/site.js" defer></script>
-    <script src="./scripts/main.js" defer></script>
-    <script src="./scripts/windchill.js" defer></script>
+    <script src="./scripts/directory.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,7 +30,6 @@
                 <li><a href="./discover.html">Discover</a></li>
                 <li class="active"><a href="./directory.html">Directory</a></li>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div id="social">
