--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="./lesson5/bom.html">BOM Website</a></li>
                 <li><a href="./lesson7/lazyload.html">Lazy Load</a></li>
                 <li><a href="./lesson9/prophet.html">Prophets</a></li>
+                <li><a href="./final/index.html">Final</a></li>
             </ul>
             <hr>
         </div>
